[gd_scene load_steps=7 format=3 uid="uid://js6jp8snajm1"]

[ext_resource type="PackedScene" uid="uid://dclrpbocvc31u" path="res://ui/menus/start_menu/start_menu.tscn" id="1_8gy84"]
[ext_resource type="Script" uid="uid://cccdjb4tsudwl" path="res://ui/menus/main_menu/main_menu.gd" id="1_ij7vn"]
[ext_resource type="PackedScene" uid="uid://13wcsxkv73xt" path="res://ui/menus/options_menu/options_menu.tscn" id="3_yjgyn"]
[ext_resource type="PackedScene" uid="uid://e1k0dg75nqg5" path="res://ui/menus/credits_menu/credits_menu.tscn" id="4_rqbgu"]
[ext_resource type="PackedScene" uid="uid://vxunk22s8orr" path="res://ui/menus/win_menu/win_menu.tscn" id="5_j3h1s"]
[ext_resource type="PackedScene" uid="uid://crq2pdc52xxi6" path="res://ui/menus/lose_menu/lose_menu.tscn" id="6_igis3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij7vn")

[node name="StartMenu" parent="." instance=ExtResource("1_8gy84")]
unique_name_in_owner = true
layout_mode = 1

[node name="OptionsMenu" parent="." instance=ExtResource("3_yjgyn")]
unique_name_in_owner = true
layout_mode = 1

[node name="CreditsMenu" parent="." instance=ExtResource("4_rqbgu")]
unique_name_in_owner = true
layout_mode = 1

[node name="WinMenu" parent="." instance=ExtResource("5_j3h1s")]
unique_name_in_owner = true
layout_mode = 1

[node name="LoseMenu" parent="." instance=ExtResource("6_igis3")]
unique_name_in_owner = true
layout_mode = 1
